Scrollbar fixes

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -848,10 +848,10 @@ object, embed, video, iframe {
                                     color: white;
                                     display: inline-block;
                                     font-family: 'proxima-nova';
-                                    font-size: 8px;
+                                    font-size: 9px;
                                     font-weight: 700;
                                     left: 0;
-                                    padding: 5px 0;
+                                    padding: 4px 0;
                                     position: absolute;
                                     text-align: center;
                                     width: 17px;
